--- a/residencial_cocoon/pubspec.yaml
+++ b/residencial_cocoon/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   http: ^1.0.0
   universal_html: ^2.2.3
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
