--- a/residencial_cocoon/pubspec.yaml
+++ b/residencial_cocoon/pubspec.yaml
@@ -1,10 +1,10 @@
 name: residencial_cocoon
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.0-160.0.dev <4.0.0'
+  sdk: ">=3.1.0-160.0.dev <4.0.0"
 
 dependencies:
   flutter:
