--- a/residencial_cocoon/pubspec.yaml
+++ b/residencial_cocoon/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   http: ^1.0.0
   universal_html: ^2.2.3
   url_strategy: ^0.2.0
+  firebase_core: ^2.13.1
+  firebase_messaging: ^14.6.2
+
 
 dev_dependencies:
   flutter_test:
