--- a/residencial_cocoon/pubspec.yaml
+++ b/residencial_cocoon/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   url_strategy: ^0.2.0
   firebase_core: ^2.13.1
   firebase_messaging: ^14.6.2
+  ionicons: ^0.2.2
 
 
 dev_dependencies:
