--- a/residencial_cocoon/pubspec.yaml
+++ b/residencial_cocoon/pubspec.yaml
@@ -17,7 +17,6 @@ dependencies:
   firebase_messaging: ^14.6.2
   ionicons: ^0.2.2
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -27,3 +26,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/menu.jpg
+    - assets/images/
