--- a/residencial_cocoon/pubspec.yaml
+++ b/residencial_cocoon/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_core: ^2.13.1
   firebase_messaging: ^14.6.2
   ionicons: ^0.2.2
+  speech_to_text: ^6.3.0
 
 dev_dependencies:
   flutter_test:
